assets/_typography.scss
// @import url(https://fonts.googleapis.com/css?family=Inconsolata);
$system-monospace: 'SFMono-Light','SFMono-Regular', Consolas, 'Liberation Mono',Menlo, Courier, monospace;
$vr-box-sizing   : border-box;
$vr-line-height  : 1.5;
$vr-modular-scale: minor-third;
$vr-grid-color   : $color13;

$vr-breakpoints: (
    30: ( // 480px
        font-size: 16px
    ),
    60em: ( // 960px
        font-size: 14px
    ),
    90em: ( // 1440px
        font-size: 15px
    )
);

html body {
  font-family: $system-monospace;
}

em {
  transform: skewX(-5deg); // I like more slant :)
  display: inline-block;
}

strong {
  font-weight: bold;
}

@import '~vertical-rhythm-reset/dist/_vertical-rhythm-reset';

@include vr-reset();

input[name='show-grid']:checked ~ article {
  @include vr-grid();
}

h1, h2, h3, h4, h5, h6, p {
  margin-top: 0;
}

hr {
  margin-left: auto;
  margin-right: auto;
  @include vr($height: 1, $margin-bottom: 1, $width: 3);
}

blockquote {
  @include vr($padding-left: 1, $margin-left: -1);
  // box-shadow: inset .2rem 0 0 color(maroon-dark);
  transform: skewX(-5deg); // I like more slant :)
  position: relative;
  color: color(green-dark);
  &:after {
	content: '\201C';
	font-family: serif;
	font-style: normal;
	font-weight: 700;
	position: absolute;
	// font-size: 175px;
	top: 0px;
	color: color(yellow-dark);
    @include vr(
      $font-size     : 2,
      $margin-top    : 0,
      $margin-bottom : 0,
      $margin-left   : -1,
      $padding-top   : 0,
      $padding-bottom: 0
    );
  }
  p {
    @include vr($margin-top: 0, $margin-bottom: 0);
  }
}

